--- a/COVID_19_CT_Scan_Classification.ipynb
+++ b/COVID_19_CT_Scan_Classification.ipynb
@@ -576,6 +576,161 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "yfCsYTMQRTvA",
+        "outputId": "f4e38804-f74d-46eb-bdcf-8ede4db78e52"
+      },
+      "source": [
+        "test_image = image.load_img('/content/drive/MyDrive/dataset/test/COVID/Covid (400).png', target_size = (255, 255))\n",
+        "test_image = image.img_to_array(test_image)\n",
+        "test_image = np.expand_dims(test_image, axis = 0)\n",
+        "result = model.predict(test_image)\n",
+        "if result[0][0] < 0.5 and result[0][1] >= 0.5:\n",
+        "  print(\"non-covid\")\n",
+        "\n",
+        "else:\n",
+        "  print(\"covid\")"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "covid\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eP5v-9afRbhf",
+        "outputId": "b8f1376f-8cc3-4d9a-bd3a-0d865a7b2324"
+      },
+      "source": [
+        "test_image = image.load_img('/content/drive/MyDrive/dataset/test/non-COVID/Non-Covid (757).png', target_size = (255, 255))\n",
+        "test_image = image.img_to_array(test_image)\n",
+        "test_image = np.expand_dims(test_image, axis = 0)\n",
+        "result = model.predict(test_image)\n",
+        "if result[0][0] < 0.5 and result[0][1] >= 0.5:\n",
+        "  print(\"non-covid\")\n",
+        "\n",
+        "else:\n",
+        "  print(\"covid\")"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "non-covid\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HIRJHyKVRofB",
+        "outputId": "63716a97-ebba-4660-a250-d8ae0398ff42"
+      },
+      "source": [
+        "test_image = image.load_img('/content/drive/MyDrive/dataset/test/non-COVID/Non-Covid (905).png', target_size = (255, 255))\n",
+        "test_image = image.img_to_array(test_image)\n",
+        "test_image = np.expand_dims(test_image, axis = 0)\n",
+        "result = model.predict(test_image)\n",
+        "if result[0][0] < 0.5 and result[0][1] >= 0.5:\n",
+        "  print(\"non-covid\")\n",
+        "\n",
+        "else:\n",
+        "  print(\"covid\")"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "non-covid\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kV6ENCW8R2im",
+        "outputId": "1a15ace7-501c-4c0d-a17d-dbfb40ab5abe"
+      },
+      "source": [
+        "test_image = image.load_img('/content/drive/MyDrive/dataset/test/COVID/Covid (522).png', target_size = (255, 255))\n",
+        "test_image = image.img_to_array(test_image)\n",
+        "test_image = np.expand_dims(test_image, axis = 0)\n",
+        "result = model.predict(test_image)\n",
+        "if result[0][0] < 0.5 and result[0][1] >= 0.5:\n",
+        "  print(\"non-covid\")\n",
+        "\n",
+        "else:\n",
+        "  print(\"covid\")"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "non-covid\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RkWuJDifR8SA",
+        "outputId": "df3b592d-e032-498c-9b47-2a929c92b7d3"
+      },
+      "source": [
+        "test_image = image.load_img('/content/drive/MyDrive/dataset/test/COVID/Covid (525).png', target_size = (255, 255))\n",
+        "test_image = image.img_to_array(test_image)\n",
+        "test_image = np.expand_dims(test_image, axis = 0)\n",
+        "result = model.predict(test_image)\n",
+        "if result[0][0] < 0.5 and result[0][1] >= 0.5:\n",
+        "  print(\"non-covid\")\n",
+        "\n",
+        "else:\n",
+        "  print(\"covid\")"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "covid\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "ibPhga8wEQ6l",
         "outputId": "113d7612-a2fc-4758-fd2d-a1753e53c8be"
       },
